--- a/src/scss/vars/cssvars.scss
+++ b/src/scss/vars/cssvars.scss
@@ -61,7 +61,9 @@ $var--baseVerticalMargin-2: var(--baseVerticalMargin-2);
 // ---------------------------------------------------------------------------
 
 $var--grid-edge: var(--grid-edge);
+$var--grid-edge--right: var(--grid-edge--right);
 $var--grid-edge--neg: var(--grid-edge--neg);
+$var--grid-edge--right--neg: var(--grid-edge--right--neg);
 
 $var--grid-0-1: var(--grid-0-1);
 $var--grid-1: var(--grid-1);
@@ -121,7 +123,7 @@ $var--font-bd-s-leading: var(--font-bd-s-leading);
 
 // NOTE: This variable receives its actual value somewhere off
 // in JavaScript-land, set by `qj/getScrollbarWidth.setCSSvar()`
-$var--browser-scrollbar-width: var(--browser-scrollbar-width, 0);
+$var--browser-scrollbar-width: var(--browser-scrollbar-width);
 
 // ---------------------------------------------------------------------------
 
